sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:60: error: not found: value dist0
  dist0 = distance(b,0,nbBases)
  ^NaiveBaseball:61: error: not found: value dist1
  dist1 = distance(b,1,nbBases)
  ^NaiveBaseball:62: error: not found: value dist0
  if ( dist0 >= dist1){
       ^NaiveBaseball:62: error: not found: value dist1
  if ( dist0 >= dist1){
                ^